--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -16,6 +16,10 @@ body {
     color: $white;
     line-height: 1.3;
     background-color: $darkblue;
+    
+    @media (min-width: 69em) {
+        height: 100vh;
+    }
 }
 
 .flex {
@@ -27,6 +31,10 @@ body {
 
     &-jc-c {
         justify-content: center;
+    }
+
+    &-jc-sb {
+        justify-content: space-between;
     }
 
     &-ai-c {
