--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,71 +1,65 @@
 @import 'global';
 @import 'variables';
 
-.ads {
-    padding: 5.5rem 1.5rem;
-
-    @media (min-width: 48em) {
-        padding: 5.5rem 4.5rem;
-    }
-
-    @media (min-width: 64em) {
-        padding: 5.5rem 12.5rem;
-    }
-
-    @media (min-width: 71.25em) {
-        display: flex;
+.card {
+    background-color: $desaturatedBlue;
+    max-width: 23.4375em;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    margin: 4rem 1.5rem;
+    
+    @media (min-width: 69em) {
         flex-direction: row-reverse;
-        justify-content: center;
+        max-width: 69.3125rem;
+        margin: 0 1.5rem;
     }
 }
 
-.image {
+.img-sec {
     background-color: $softViolet;
-    border-radius: 0.8rem 0.8rem 0 0;
-
-    @media (min-width: 71.25em) {
-        border-radius: 0 0.8rem 0.8rem 0;
-    }
-
     img {
-        width: 100%;
-        height: 100%;
-        margin-bottom: -0.3rem;
-        border-radius: 0.8rem 0.8rem 0 0;
+        content: url(../images/image-header-mobile.jpg);
+        display: block;
+        max-width: 100%;
+        height: auto;
         mix-blend-mode: multiply;
+        opacity: 0.8;
 
-        @media (min-width: 71.25em) {
-            border-radius: 0 0.8rem 0.8rem 0;
+        @media (min-width: 69em) {
+            content: url(../images/image-header-desktop.jpg);
+            max-width: 33.75rem;
+            height: 27.8125rem;
         }
     }
 }
 
-.get {
-    background-color: $desaturatedBlue;
-    padding: 1.5rem;
-    border-radius: 0 0 0.8rem 0.8rem;
-
-    @media (min-width: 71.25em) {
-        padding: 4rem 5rem;
-        border-radius: 0.8rem 0 0 0.8rem;
-    }
+article {
+    text-align: center;
+    margin: 2.5rem 2.8rem 0;
     
-    h2, p, ul {
+    @media (min-width: 69em) {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 4rem 7rem 4rem 4rem;
+    }
+}
+
+.wrap {
+    h1, p{
         margin-top: 0;
-        padding-left: 0;
         text-align: center;
 
-        @media (min-width: 71.25em) {
+        @media (min-width: 69em) {
             text-align: left;
         }
     }
-    
-    h2 {
-        font-size: $subheading;
 
-        @media (min-width: 71.25em) {
-            font-size: 2.3rem;
-            max-width: 27rem;
+    h1 {
+        font-size: 1.8rem;
+
+        @media (min-width: 69em) {
+            font-size: 2rem;
         }
 
         span {
@@ -74,44 +68,36 @@
     }
 
     p {
-        font-size: 0.875rem;
+        margin-bottom: 3.125rem;
+        line-height: 1.6;
         color: $transparentWhite;
-        margin-bottom: 2rem;
-        
-        @media (min-width: 71.25em) {
-            max-width: 21rem;
-            line-height: 1.9;
-            margin-bottom: 4.5rem;
-        }
+    }
+}
+
+.stats {
+    @media (min-width: 69em) {
+        display: flex;
+        justify-content: start;
+        gap: 3rem;
+    }
+    h2, p {
+        margin: 0;
     }
 
-    ul {
-        list-style-type: none;
-        margin-bottom: 0;
-        font-size: $subheading;
-        font-weight: bold;
-
-        @media (min-width: 71.25em) {
-            display: flex;
-            justify-content: space-between;
-            width: 21rem;
-        }
+    h2 {
+        margin-bottom: 0.5rem;
+        font-size: 1.5rem;
     }
-    
-    li {
-        span {
-            display: block;
-            font-family: $inter;
-            font-size: 0.6875rem;
-            font-weight: normal;
-            color: $slightlyWhite;
-            padding-top: 0.4rem;
-            padding-bottom: 1.4rem;
-            
-            @media (min-width: 71.25em) {
-                padding-bottom: 0;
-                font-size: 0.8rem;
-            }
+
+    p {
+        font-family: 'Lexend Deca', sans-serif;
+        font-size: 0.75rem;
+        color: $slightlyWhite;
+        text-transform: uppercase;
+        margin-bottom: 2.1875rem;
+
+        @media (min-width: 69em) {
+            margin-bottom: 0;
         }
     }
 }
